force-app/main/default/objects/Practice_Contact_Role__c/Practice_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Practice Contact Role</label>
    <nameField>
        <displayFormat>PCR-{000000}</displayFormat>
        <label>Practice Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practice Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>