force-app/main/default/objects/Practice_Contact_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Role</relationshipLabel>
    <relationshipName>Contact_Role</relationshipName>
    <type>Lookup</type>
</CustomField>