force-app/main/default/objects/Practice_Contact_Role__c/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Practice Contact Role</relationshipLabel>
    <relationshipName>Practice_Contact_Role</relationshipName>
    <type>Lookup</type>
</CustomField>