force-app/main/default/objects/Practice_Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Treatment Finder Lead Recipient</fullName>
            </value>
            <value>
                <fullName>Facebook Lead Recipient</fullName>
            </value>
            <value>
                <fullName>Web Chat Lead Recipient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>